--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ findings suggest that the Transformer has potential to excel in subjective areas
 </section>
 <!-- End paper abstract -->
 
-<section class="section hero is-light"></section>
+<section class="section hero is-light">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
